src/scss/_main/style.scss
/* ... */
.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper.cl-inverse .cl-widget-ms-sum-best-date {
  display: none;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-area {
  float: left;
  width: 100%;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-high-area {
  float: left;
  width: 100%;
  padding: 0;
  line-height: 12px;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-high-label,
.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-last-label {
  float: left;
  width: 100%;
  color: var(--lb3-miniscoreboard-vertical-first-to-rank-color);
  font-size: 9px;
  text-transform: uppercase;
  text-align: center;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-high-score,
.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-last-score {
  float: left;
  width: 100%;
  text-align: center;
  color: var(--light-font-color);
  font-size: 12px;
  padding: 3px 0 10px 0;
  line-height: 17px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-last-area {
  float: left;
  width: 100%;
  padding: 0;
  line-height: 12px;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-rank-area {
  float: left;
  width: 100%;
  text-align: center;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-rank-value {
  float: left;
  width: 100%;
  text-align: center;
  font-size: 14px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-rank-value.cl-ms-rank-same {
  padding: 0 0 0 0;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-rank-value.cl-ms-rank-up::before {
  background-position: 0 6px;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-sum-best-wrapper .cl-widget-ms-sum-best-rank-value.cl-ms-rank-down::before {
  background-position: 0 6px;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-optin-wrapper .cl-widget-ms-optin-date-label {
  float: left;
  width: 100%;
  text-align: center;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-optin-wrapper .cl-widget-ms-optin-date {
  float: left;
  width: 100%;
  text-align: center;
  padding: 0 0 20px 0;
}

.cl-widget-ms-wrapper.cl-vertical-mini .cl-widget-ms-optin-wrapper .cl-widget-ms-optin-action {
  float: left;
  width: 100%;
  cursor: pointer;
  background: var(--primary-color);
  text-align: center;
  text-transform: uppercase;
  color: var(--light-font-color);
  border-radius: 5px;
  border: 1px solid var(--light-font-color);
  line-height: 16px;
  font-size: 9px;
  font-weight: 400;
  transition: all 0.3s ease;
  padding: 5px 0;
}


/**
 * Main Section area
 */
.cl-main-widget-wrapper {
  position: fixed;
  z-index: 1001;
  display: none;
  opacity: 0;
  top: 0;
  left: 50%;
  width: 100%;
  height: 100%;
  background: transparent;
  padding: 40px 20px 10px;
  font-family: var(--lb3-widget-font);
  font-weight: 300;
  margin: 0;
  box-sizing: border-box;
  line-height: 20px;
  border: 0;
  vertical-align: baseline;
  background: none;
  max-width: 1037px;
  transform: translate(-50%, 0);
}

.cl-main-widget-wrapper.cl-show {
  opacity: 1;
  transition: all 0.3s ease;
}

.cl-main-widget-wrapper .cl-main-widget-inner-wrapper {
  transition: background 0.3s;
  position: relative;
  display: flex;
  max-width: 997px;
  max-height: 816px;
  width: 100%;
  height: 100%;
  z-index: 1;
  left: 0;
  top: 0;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
  padding-top: 20px;
  width: 148px;
  height: 100%;
  z-index: 2;
}

.cl-main-widget-wrapper .cl-hidden-navigation .cl-main-widget-navigation-container {
  display:none;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-logo {
  width: 68px;
  height: 68px;
  background-image: $lb3-widget-icon-nav;
  background-size: 100%;
  flex-shrink: 0;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-items {
  padding: 46px 0 0 0;
  flex-grow: 1;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-items .cl-main-widget-navigation-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 108px;
  min-height: 67px;
  margin-bottom: 20px;
  font-family: 'Syne', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  cursor: pointer;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-items .cl-main-widget-navigation-item.cl-active-nav {
  background: #EE3EC8;
  border-radius: 10px;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-darkMode-toggle {
  padding-bottom: 45px;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-darkMode-toggle label {
  width: 40px;
  height: 73px;
  position: relative;
  display: block;
  background: #304F69 url(../../images/sun-dark.svg) no-repeat center 13%;
  border-radius: 30px;
  cursor: pointer;
}

.cl-main-widget-wrapper .cl-main-widget-navigation-container .cl-main-widget-navigation-darkMode-toggle label::after {
  content: "";
  width: 40px;
  height: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  background: #EE3EC8 url(../../images/moon.svg) no-repeat center center;
  border-radius: 50%;
}
/* ... */

